--- a/emoji.html
+++ b/emoji.html
@@ -358,7 +358,7 @@ code {
         </div>
       </main>
   
-      <script type="text/javascript" src="/assets/js/emoji_stuff.js"></script>
-      <script type="text/javascript" src="/assets/js/emoji_search.js"></script>
+      <script type="text/javascript" src="/docs/assets/js/emoji_stuff.js"></script>
+      <script type="text/javascript" src="/docs/assets/js/emoji_search.js"></script>
     </body>
 </html>
